--- a/assets/css/stack.css
+++ b/assets/css/stack.css
@@ -14,16 +14,14 @@ a:not(:hover) {
 }
 
 .stack {
-  color: #fff;
   box-sizing: border-box;
   -moz-box-sizing: border-box;
   -webkit-box-sizing: border-box;
   -ms-box-sizing: border-box;
   -o-box-sizing: border-box;
   display: none;
-  font-size: 48px;
   height: 800px;
-  padding: 160px 80px;
+  padding: 40px 80px;
   width: 1280px;
   -webkit-transform: translate3d(0,0,0);
 }
@@ -57,7 +55,17 @@ screen and (max-device-width: 1024px) {
   font-family: 'Arvo', serif;
     display: block;
 }
+.jumbotron {
+  padding-top: 250px;
+}
 
+.side h4, .side h5 {
+  padding-left: 90px;
+}
+
+.common .jumbotron {
+  padding-top: 30px;
+}
 
 .brand {
   display: block;
@@ -68,18 +76,23 @@ screen and (max-device-width: 1024px) {
   background-position:50% 50%; 
   text-indent: -5000px;
   padding: 0px;
-  margin-left: 15px;
   margin-top: 0px;
   }
 
 
 .lead {
   position: relative;
-  margin-top: -45px;
-  margin-left: 112px;
+  margin-top: -35px;
+  margin-left: 100px;
   color: #969696;
   font-size: 14px;
   font-weight: bold;
   letter-spacing: -.05em;
   color: ;
 }
+
+.block {
+  display: block;
+  height: 80px;
+}
+
